src/test/ui/type-alias-impl-trait/generic_duplicate_param_use9.stderr
error: concrete type differs from previous defining opaque type use
  --> $DIR/generic_duplicate_param_use9.rs:21:1
   |
LL | fn three<T: Debug, U: Debug>(t: T, u: U) -> Two<T, U> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `(A, B, <A as Foo>::Bar)`, got `(A, B, i32)`
   |
note: previous use here
  --> $DIR/generic_duplicate_param_use9.rs:17:1
   |
LL | fn two<T: Debug + Foo, U: Debug>(t: T, u: U) -> Two<T, U> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: `A` doesn't implement `Debug`
  --> $DIR/generic_duplicate_param_use9.rs:7:18
   |
LL | type Two<A, B> = impl Debug;
   |                  ^^^^^^^^^^ `A` cannot be formatted using `{:?}` because it doesn't implement `Debug`
   |
   = note: required because of the requirements on the impl of `Debug` for `(A, B, <A as Foo>::Bar)`
help: consider restricting type parameter `A`
   |
LL | type Two<A: std::fmt::Debug, B> = impl Debug;
   |           +++++++++++++++++

error[E0277]: `B` doesn't implement `Debug`
  --> $DIR/generic_duplicate_param_use9.rs:7:18
   |
LL | type Two<A, B> = impl Debug;
   |                  ^^^^^^^^^^ `B` cannot be formatted using `{:?}` because it doesn't implement `Debug`
   |
   = note: required because of the requirements on the impl of `Debug` for `(A, B, <A as Foo>::Bar)`
help: consider restricting type parameter `B`
   |
LL | type Two<A, B: std::fmt::Debug> = impl Debug;
   |              +++++++++++++++++

error[E0277]: the trait bound `A: Foo` is not satisfied
  --> $DIR/generic_duplicate_param_use9.rs:7:18
   |
LL | type Two<A, B> = impl Debug;
   |                  ^^^^^^^^^^ the trait `Foo` is not implemented for `A`
   |
   = note: required because of the requirements on the impl of `Debug` for `(A, B, <A as Foo>::Bar)`
help: consider restricting type parameter `A`
   |
LL | type Two<A: Foo, B> = impl Debug;
   |           +++++

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0277`.
